# gamebaby-20170912-dumped

./: CMakeLists.txt  Makefile  README  characters.txt  game.cpp  game.hpp  game_commandpillar.cpp  game_commandpillar.hpp  game_environment.cpp  game_environment.hpp  game_item.cpp  game_item.hpp  game_message.cpp  game_message.hpp  game_message_page.cpp  game_place.cpp  game_place.hpp  game_routine.cpp  game_routine.hpp  game_routine__basic.cpp  game_routine__select.cpp  game_tagtable.cpp  game_tagtable.hpp  game_world.cpp  game_world.hpp  game_xx.cpp  game_xx.hpp  gmbb.cpp  gmbb.hpp  gmbb_container.hpp  gmbb_controller.cpp  gmbb_controller.hpp  gmbb_core.cpp  gmbb_core.hpp  gmbb_font.hpp  gmbb_formatted.cpp  gmbb_formatted.hpp  gmbb_garden.cpp  gmbb_garden.hpp  gmbb_plain.hpp  (+11 more)
cbes/: Makefile  cbes_charactertable.cpp  cbes_charactertable.hpp  cbes_container.cpp  cbes_container.hpp  cbes_datenote.cpp  cbes_datenote.hpp  cbes_object.cpp  cbes_object.hpp  cbes_rectangle.hpp  cbes_screen.cpp  cbes_screen.hpp  cbes_timenote.cpp  cbes_timenote.hpp  cbes_window.cpp  cbes_window.hpp  characters.txt  combineds.txt  fcfont.cpp  fcfont.hpp
core/: Makefile  combineds.txt  gmbb.hpp  gmbb_color_table.cpp  gmbb_color_table.hpp  gmbb_container.cpp  gmbb_container.hpp  gmbb_controller.cpp  gmbb_controller.hpp  gmbb_environment.cpp  gmbb_environment.hpp  gmbb_file.cpp  gmbb_file.hpp  gmbb_filereader.cpp  gmbb_filereader.hpp  gmbb_filewriter.cpp  gmbb_filewriter.hpp  gmbb_font.cpp  gmbb_font.hpp  gmbb_font__large.cpp  gmbb_garden.cpp  gmbb_garden.hpp  gmbb_image.cpp  gmbb_image.hpp  gmbb_image__frame.cpp  gmbb_image__mgf.cpp  gmbb_image__png.cpp  gmbb_image__print.cpp  gmbb_media.cpp  gmbb_media.hpp  gmbb_message.cpp  gmbb_message.hpp  gmbb_message_page.cpp  gmbb_object.cpp  gmbb_object.hpp  gmbb_palette.hpp  gmbb_plain.cpp  gmbb_plain__frame.cpp  gmbb_plain__print.cpp  gmbb_player.cpp  (+18 more)
rogie/: rogie.hpp  rogie_basic_callback.cpp  rogie_basic_callback.hpp  rogie_context.cpp  rogie_context.hpp  rogie_direction.hpp  rogie_field.cpp  rogie_field.hpp  rogie_field__callback.cpp  rogie_field__contextcallback.cpp  rogie_field__manage.cpp  rogie_field__taskcallback.cpp  rogie_firearm.cpp  rogie_firearm.hpp  rogie_item.cpp  rogie_item.hpp  rogie_object.cpp  rogie_object.hpp  rogie_piece.cpp  rogie_piece.hpp  rogie_piece__autoplay.cpp  rogie_piece__callback.cpp  rogie_piece__contextcallback.cpp  rogie_piece__taskcallback.cpp  rogie_square.cpp  rogie_square.hpp  rogie_square__search.cpp  rogie_task.cpp  rogie_task.hpp  rogie_taskmanager.cpp  rogie_taskmanager.hpp
rpg/: Makefile  rpg_core.cpp  rpg_core.hpp  rpg_core__bathtoilet_scene.cpp  rpg_core__event_bathtoilet.cpp  rpg_core__event_living.cpp  rpg_core__event_main.cpp  rpg_core__living_scene.cpp  rpg_core__main_scene.cpp  rpg_core__private.cpp  rpg_core__private.hpp  rpg_event.cpp  rpg_event.hpp  rpg_player.cpp  rpg_player.hpp  rpg_point.hpp  rpg_routine.cpp  rpg_routine.hpp  rpg_scene.hpp  rpg_squaremap.cpp  rpg_squaremap.hpp
text_adv/: Makefile  ta.cpp  ta.hpp  ta_commandpillar.cpp  ta_commandpillar.hpp  ta_item.cpp  ta_item.hpp  ta_place.cpp  ta_place.hpp  ta_routine.cpp  ta_routine.hpp  ta_routine__basic.cpp  ta_routine__select.cpp  ta_tagtable.cpp  ta_tagtable.hpp  ta_world.cpp  ta_world.hpp
trpt/: Makefile  trpt.hpp  trpt_board.cpp  trpt_board.hpp  trpt_board__load.cpp  trpt_cursor.cpp  trpt_cursor.hpp  trpt_energy.cpp  trpt_energy.hpp  trpt_entrybook.hpp  trpt_facility.cpp  trpt_facility.hpp  trpt_master.cpp  trpt_master.hpp  trpt_master__draw.cpp  trpt_master__process.cpp  trpt_movecontext.cpp  trpt_movecontext.hpp  trpt_piece.cpp  trpt_piece.hpp  trpt_piecemanager.cpp  trpt_piecemanager.hpp  trpt_player.cpp  trpt_player.hpp  trpt_porter.cpp  trpt_porter.hpp  trpt_square.cpp  trpt_square.hpp  trpt_town.hpp  trpt_vector.hpp  trpt_view.cpp  trpt_view.hpp
